# BinaryEmbed

./: CMakeLists.txt  README.MD  README.RST  binembed-generator.cxx
example/: CMakeLists.txt  main.cxx
generator/: CMakeLists.txt  main.cxx
module/: IncludeBinEmbed.cmake
src/: main.cxx
tests/: CMakeLists.txt  test.cxx.in  util-rand-generator.cxx
tests/test-11B/: CMakeLists.txt  test.cxx
tests/test-build/: CMakeLists.txt
